--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,7 +16,7 @@ on:
 env:
   # credentials for deployment to AWS
  AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
- AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRETE_ACCESS_KEY }}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   # S3 bucket for terraform state
  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
