--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,7 +55,7 @@ jobs:
 
        - name: Terraform plan
          id: plan
-         run: terraform plan -no-color -input=flase -out planfile
+         run: terraform plan -no-color -input=false -out planfile
          continue-on-error: true
 
        - name: Terraform plan status
