--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,4 +85,24 @@ jobs:
 
        - name: Install Ingress controller
          if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
-         run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml}
+         run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
+         
+         
+       - name: Install ArgoCD
+         if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
+         run: |
+           kubectl create namespace argocd || true
+           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+ 
+       - name: Wait for ArgoCD server rollout
+         run: |
+           echo "Waiting for ArgoCD server to be ready..."
+           kubectl -n argocd rollout status deploy/argocd-server --timeout=180s
+ 
+   #   - name: Apply ArgoCD Ingress (Optional)
+   #      run: |
+   #       if [ -f argocd-ingress.yaml ]; then
+   #         kubectl apply -f argocd-ingress.yaml
+   #       else
+   #         echo "No Ingress file found. Skipping."
+   #       fi 
