updated region variable

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,7 +20,7 @@ env:
 
   # S3 bucket for terraform state
  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
- AWS_REGION: ap-south-1
+ AWS_REGION: us-east-1
  EKS_CLUSTER: vprofile-eks
 
 jobs:
